# trend-surfer

./: .gitignore  CLAUDE.md  add_stock.py
.claude/: settings.json
backend/: .env.example  README.md  add_stock.py  analyze_trades.py  analyze_trades_matched.py  debug_indicators.py  debug_output.txt  pyproject.toml  recalculate_rsi.py  temp_check.py  temp_check_indicators.py  temp_strategy_output.txt  trade_analysis_result.txt  trade_analysis_result_matched.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: collector.py  signals.py
backend/app/backtest/: __init__.py  engine.py  portfolio.py  result.py  risk_manager.py  trade_repository.py
backend/app/backtest/strategies/: __init__.py  base.py  ema_breakout.py  rsi_swing.py  sma_breakout.py  trend_following.py
backend/app/core/: config.py  constants.py  logger.py
backend/app/db/: client.py
backend/app/services/: collector.py  hybrid_collector.py  index_collector.py  indicator_calculator.py  krx_collector.py  market_filter.py  notifier.py  strategy_scanner.py
backend/db/: schema.sql
backend/results/: equity.csv  trades.csv
backend/test/: FinanceDataReader.ipynb  krx_open_api.ipynb  pykrx.ipynb  pykrx_test.py  test_indicator_calculator.py
backend/test/kiwoom-rest-api/: __init__.py  config.py  example8_1.py  example8_2.py  main.ui  tr_process_functions.py  utils.py  websocket_functions.py
backend/tests/: conftest.py  test_engine_entry_guard.py  test_indicator_calculator.py  test_notifier.py  test_strategy_scanner.py  test_trend_following_exit.py
doc/: PRD.md  (+21 more)
(+47 files in other folders)
