[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.128.0",
    "finance-datareader>=0.9.101",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pykrx>=1.0.51",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0,<81",
    "supabase>=2.27.1",
    "ta-lib>=0.6.5",
    "openpyxl>=3.1.0",
    "uvicorn>=0.40.0",
]
